docs: add MiniDB project overview